tests/ui/borrowck/use_after_move.rx
//@ spec: RXS-0054
struct Token {
    id: i32,
}

fn eat(t: Token) -> i32 {
    t.id
}

fn main() {
    let t = Token { id: 1 };
    let _a = eat(t);
    let _b = eat(t); //~ ERROR RX4001
}
